@@ -1,1 +1,0 @@
-/dev/null | -I2 -l72 | data-01.txt
